--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <link href="style.css" rel="stylesheet" type= "text/css">
 </head>
 <body>
-<header>
+<table>
+	<tr>
+		<td colspan="2">
 <div class="row">
 <div><img src="img\home.png"></div>
   <div class="block_4"><a id="link" href="Trangchu.html">Trang chủ</a></div>
@@ -19,8 +21,8 @@
          <div class="block_3"><h2>III.Sử dụng,phòng tránh rủi ro của AI</h2><p>Đặt đúng vị trí,AI cũng có thể tỏa sáng hoặc lụi tàn</p></div>
       </div>
 	  </div>
-</header>
-<table> 
+	</td>
+	</tr>
    <tr>
       <td class="cell_text1">
 	  <h1>I.Bước sơ khai của AI</h1>
