--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </head>
 <body>
 <table>
-	<tr>
-		<td colspan="2">
+<tr>
+<td colspan="2">
 <div class="row">
-<div><img src="img\home.png"></div>
+<div>
+<img src="img\home.png"></div>
   <div class="block_4"><a id="link" href="Trangchu.html">Trang chủ</a></div>
 </div>
    <div class="banner">
@@ -21,8 +22,8 @@
          <div class="block_3"><h2>III.Sử dụng,phòng tránh rủi ro của AI</h2><p>Đặt đúng vị trí,AI cũng có thể tỏa sáng hoặc lụi tàn</p></div>
       </div>
 	  </div>
-	</td>
-	</tr>
+</td>
+</tr>
    <tr>
       <td class="cell_text1">
 	  <h1>I.Bước sơ khai của AI</h1>
